--- a/ATBS Ch5.ipynb
+++ b/ATBS Ch5.ipynb
@@ -181,6 +181,368 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: color Value: red\n",
+      "Key: age Value: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "spam = {'color': 'red', 'age':42}\n",
+    "for k, v in spam.items():\n",
+    "    print('Key: ' + k + ' Value: ' + str(v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam = {'name': 'Zophie', 'age' : 7}\n",
+    "'name' in spam.keys()\n",
+    "'Zophie' in spam.values()\n",
+    "'color' in spam.keys()\n",
+    "'color' not in spam.keys()\n",
+    "'color' in spam # this is a short version of spam.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am bringing 2 cups\n",
+      "I am bringing 0 eggs\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The get() Method allows you to get the value of a key, or return\n",
+    "# a fall-back value if is not in the dictionary\n",
+    "picnicItems = {'apples' : 5, 'cups' : 2}\n",
+    "print('I am bringing ' + str(picnicItems.get('cups',0)) + ' cups')\n",
+    "print('I am bringing ' + str(picnicItems.get('eggs',0)) + ' eggs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "black\n",
+      "black\n"
+     ]
+    }
+   ],
+   "source": [
+    "spam = {'name' : 'Pooka', 'age' : 5}\n",
+    "print(spam.setdefault('color', 'black'))\n",
+    "print(spam.setdefault('color', 'white'))\n",
+    "# Second use for setdefault does not return white because color now already has\n",
+    "# a value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'I': 1, 't': 6, ' ': 13, 'w': 2, 'a': 4, 's': 3, 'b': 1, 'r': 5, 'i': 6, 'g': 2, 'h': 3, 'c': 3, 'o': 2, 'l': 3, 'd': 3, 'y': 1, 'n': 4, 'A': 1, 'p': 1, ',': 1, 'e': 5, 'k': 2, '.': 1}\n",
+      "{' ': 13,\n",
+      " ',': 1,\n",
+      " '.': 1,\n",
+      " 'A': 1,\n",
+      " 'I': 1,\n",
+      " 'a': 4,\n",
+      " 'b': 1,\n",
+      " 'c': 3,\n",
+      " 'd': 3,\n",
+      " 'e': 5,\n",
+      " 'g': 2,\n",
+      " 'h': 3,\n",
+      " 'i': 6,\n",
+      " 'k': 2,\n",
+      " 'l': 3,\n",
+      " 'n': 4,\n",
+      " 'o': 2,\n",
+      " 'p': 1,\n",
+      " 'r': 5,\n",
+      " 's': 3,\n",
+      " 't': 6,\n",
+      " 'w': 2,\n",
+      " 'y': 1}\n",
+      "{' ': 13,\n",
+      " ',': 1,\n",
+      " '.': 1,\n",
+      " 'A': 1,\n",
+      " 'I': 1,\n",
+      " 'a': 4,\n",
+      " 'b': 1,\n",
+      " 'c': 3,\n",
+      " 'd': 3,\n",
+      " 'e': 5,\n",
+      " 'g': 2,\n",
+      " 'h': 3,\n",
+      " 'i': 6,\n",
+      " 'k': 2,\n",
+      " 'l': 3,\n",
+      " 'n': 4,\n",
+      " 'o': 2,\n",
+      " 'p': 1,\n",
+      " 'r': 5,\n",
+      " 's': 3,\n",
+      " 't': 6,\n",
+      " 'w': 2,\n",
+      " 'y': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pprint\n",
+    "\n",
+    "message = 'It was a bright cold day in April, and the clocks were striking thirteen.'\n",
+    "count = {}\n",
+    "\n",
+    "for character in message:\n",
+    "    count.setdefault(character, 0)\n",
+    "    count[character] += 1\n",
+    "\n",
+    "print(count)\n",
+    "pprint.pprint(count)\n",
+    "strg = pprint.pformat(count) # outputs the prettified dictionary as a string\n",
+    "print(strg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " | | \n",
+      "-+-+-\n",
+      " | | \n",
+      "-+-+-\n",
+      " | | \n",
+      "Turn for X. Move on which space?\n",
+      "top-L\n",
+      "X| | \n",
+      "-+-+-\n",
+      " | | \n",
+      "-+-+-\n",
+      " | | \n",
+      "Turn for O. Move on which space?\n",
+      "top-M\n",
+      "X|O| \n",
+      "-+-+-\n",
+      " | | \n",
+      "-+-+-\n",
+      " | | \n",
+      "Turn for X. Move on which space?\n",
+      "top-R\n",
+      "X|O|X\n",
+      "-+-+-\n",
+      " | | \n",
+      "-+-+-\n",
+      " | | \n",
+      "Turn for O. Move on which space?\n",
+      "mid-L\n",
+      "X|O|X\n",
+      "-+-+-\n",
+      "O| | \n",
+      "-+-+-\n",
+      " | | \n",
+      "Turn for X. Move on which space?\n",
+      "mid-M\n",
+      "X|O|X\n",
+      "-+-+-\n",
+      "O|X| \n",
+      "-+-+-\n",
+      " | | \n",
+      "Turn for O. Move on which space?\n",
+      "mid-R\n",
+      "X|O|X\n",
+      "-+-+-\n",
+      "O|X|O\n",
+      "-+-+-\n",
+      " | | \n",
+      "Turn for X. Move on which space?\n",
+      "low-L\n",
+      "X|O|X\n",
+      "-+-+-\n",
+      "O|X|O\n",
+      "-+-+-\n",
+      "X| | \n",
+      "Turn for O. Move on which space?\n",
+      "low-M\n",
+      "X|O|X\n",
+      "-+-+-\n",
+      "O|X|O\n",
+      "-+-+-\n",
+      "X|O| \n",
+      "Turn for X. Move on which space?\n",
+      "low-R\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'theBoard0' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-b3d6b9f733a4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[0mturn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'X'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mprintBoard\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtheBoard0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'theBoard0' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "theBoard = {'top-L': ' ', 'top-M': ' ', 'top-R': ' ',\n",
+    "           'mid-L': ' ', 'mid-M': ' ', 'mid-R': ' ',\n",
+    "           'low-L': ' ', 'low-M': ' ', 'low-R': ' '}\n",
+    "\n",
+    "def printBoard(board):\n",
+    "    print(board['top-L'] + '|' + board['top-M'] + '|' + board['top-R'])\n",
+    "    print('-+-+-')\n",
+    "    print(board['mid-L'] + '|' + board['mid-M'] + '|' + board['mid-R'])\n",
+    "    print('-+-+-')\n",
+    "    print(board['low-L'] + '|' + board['low-M'] + '|' + board['low-R'])\n",
+    "    \n",
+    "turn = 'X'\n",
+    "for i in range(9):\n",
+    "    printBoard(theBoard)\n",
+    "    print('Turn for ' + turn + '. Move on which space?')\n",
+    "    move = input()\n",
+    "    theBoard[move] = turn\n",
+    "    if turn == 'X':\n",
+    "        turn = 'O'\n",
+    "    else:\n",
+    "        turn = 'X'\n",
+    "printBoard(theBoard)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of things being brought:\n",
+      " - Apples         7\n",
+      " - Cups           3\n",
+      " - Cakes          0\n",
+      " - Ham Sandwiches 3\n",
+      " - Apple Pies     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "allGuests = {'Alice': {'apples': 5, 'pretzels': 12},\n",
+    "            'Bob': {'ham sandwiches': 3, 'apples': 2},\n",
+    "            'Carol': {'cups': 3, 'apple pies': 1}}\n",
+    "\n",
+    "def totalBrought(guests,item):\n",
+    "    numBrought = 0\n",
+    "    for k, v in guests.items():\n",
+    "        numBrought += v.get(item,0)\n",
+    "    return numBrought\n",
+    "\n",
+    "print('Number of things being brought:')\n",
+    "print(' - Apples         ' + str(totalBrought(allGuests, 'apples')))\n",
+    "print(' - Cups           ' + str(totalBrought(allGuests, 'cups')))\n",
+    "print(' - Cakes          ' + str(totalBrought(allGuests, 'cakes')))\n",
+    "print(' - Ham Sandwiches ' + str(totalBrought(allGuests, 'ham sandwiches')))\n",
+    "print(' - Apple Pies     ' + str(totalBrought(allGuests, 'apple pies')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inventory:\n",
+      "1 rope\n",
+      "6 torch\n",
+      "42 gold coin\n",
+      "1 dagger\n",
+      "12 arrow\n",
+      "Total number of items: 62\n",
+      "Inventory:\n",
+      "1 rope\n",
+      "6 torch\n",
+      "45 gold coin\n",
+      "2 dagger\n",
+      "12 arrow\n",
+      "1 ruby\n",
+      "Total number of items: 67\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inventory.py\n",
+    "stuff = {'rope': 1, 'torch': 6, 'gold coin': 42, 'dagger': 1, 'arrow': 12}\n",
+    "dragonLoot = ['gold coin', 'dagger', 'gold coin', 'gold coin', 'ruby']\n",
+    "\n",
+    "def addToInventory(inventory, addedItems):\n",
+    "    for item in addedItems:\n",
+    "        inventory[item] = 1 + inventory.get(item, 0)\n",
+    "\n",
+    "def displayInventory(inventory):\n",
+    "    print(\"Inventory:\")\n",
+    "    item_total = 0\n",
+    "    for k, v in inventory.items():\n",
+    "        # FILL IN THE CODE HERE\n",
+    "        item_total += v\n",
+    "        print(str(v) + ' ' + str(k))\n",
+    "    print(\"Total number of items: \" + str(item_total))\n",
+    "\n",
+    "displayInventory(stuff)\n",
+    "addToInventory(stuff, dragonLoot)\n",
+    "displayInventory(stuff)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
