Finished, except project

--- a/ATBS Ch6.ipynb
+++ b/ATBS Ch6.ipynb
@@ -438,6 +438,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cats, rats, bats\n",
+      "My name is Simon\n",
+      "MyABCnameABCisABCSimon\n",
+      "['My', 'name', 'is', 'Simon']\n",
+      "['My name is Simon']\n",
+      "['My na', 'e is Si', 'on']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# join() and split()\n",
+    "print(', '.join(['cats', 'rats', 'bats']))\n",
+    "print(' '.join(['My', 'name', 'is', 'Simon']))\n",
+    "print('ABC'.join(['My', 'name', 'is', 'Simon']))\n",
+    "\n",
+    "print('My name is Simon'.split())\n",
+    "print('My name is Simon'.split('ABC'))\n",
+    "print('My name is Simon'.split('m'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dear Alice, ',\n",
+       " 'How have you been? I am fine. ',\n",
+       " 'There is a container in the fridge that is labeled \"Milk Experiment\".',\n",
+       " '',\n",
+       " 'Please do not drink it.',\n",
+       " 'Sincerely,',\n",
+       " 'Bob']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam = '''Dear Alice, \n",
+    "How have you been? I am fine. \n",
+    "There is a container in the fridge that is labeled \"Milk Experiment\".\n",
+    "\n",
+    "Please do not drink it.\n",
+    "Sincerely,\n",
+    "Bob'''\n",
+    "\n",
+    "spam.split('\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Hello\n",
+      "               Hello\n",
+      "         Hello World\n",
+      "Hello     \n",
+      "*****Hello\n",
+      "Hello-----\n",
+      "       Hello        \n",
+      "=======Hello========\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rjust(), ljust(), center()\n",
+    "print('Hello'.rjust(10))\n",
+    "print('Hello'.rjust(20))\n",
+    "print('Hello World'.rjust(20))\n",
+    "print('Hello'.ljust(10))\n",
+    "print('Hello'.rjust(10, '*'))\n",
+    "print('Hello'.ljust(10, '-'))\n",
+    "print('Hello'.center(20))\n",
+    "print('Hello'.center(20,'='))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---PICNIC ITEMS--\n",
+      "sandwiches..    4\n",
+      "apples......   12\n",
+      "cups........    4\n",
+      "cookies..... 8000\n",
+      "---------PICNIC ITEMS---------\n",
+      "sandwiches..........         4\n",
+      "apples..............        12\n",
+      "cups................         4\n",
+      "cookies.............      8000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printPicnic(itemsDict, leftWidth, rightWidth):\n",
+    "    print('PICNIC ITEMS'.center(leftWidth + rightWidth, '-'))\n",
+    "    for k, v in itemsDict.items():\n",
+    "        print(k.ljust(leftWidth, '.') + str(v).rjust(rightWidth))\n",
+    "        \n",
+    "picnicItems = {'sandwiches': 4, 'apples': 12, 'cups': 4, 'cookies': 8000}\n",
+    "printPicnic(picnicItems, 12, 5)\n",
+    "printPicnic(picnicItems, 20, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "     Hello World\n",
+      "Hello World    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'BaconSpamEggs'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# strip(), rstrip(), lstrip() to remove whitespace\n",
+    "spam = '     Hello World    '\n",
+    "print(spam.strip())\n",
+    "print(spam.rstrip())\n",
+    "print(spam.lstrip())\n",
+    "\n",
+    "spam = 'SpamSpamBaconSpamEggsSpamSpam'\n",
+    "spam.strip('ampS') # removes all occurances of a, m, p, and S from ends of string\n",
+    "spam.strip('Spam') \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# copying and pasting strings with pyperclip module\n",
+    "#import sys\n",
+    "#!{sys.executable} -m pip install pyperclip\n",
+    "\n",
+    "import pyperclip\n",
+    "pyperclip.copy('Hello World!')\n",
+    "print(pyperclip.paste())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"'For example, if I copied this sentence to the clipboard and then called\\r\\npaste(), it would look like this:'\""
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pyperclip.paste()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
